# area-diameter-algorithm

./: .gitignore  .gitmodules  CITATION.cff  CMakeLists.txt  LICENSE  README.md
data/latex/: sources.bib
data/reports/: area_selector_data_results.json  area_selector_results.json  benchmark_data_results.json  benchmark_results.json  benchmark_runs.json  comparison_results.json
data/reports/2mm2_2mm/: benchmark_data_results.json  benchmark_runs.json
data/reports/2mm2_2mm_gaussian_150/: benchmark_data_results.json  benchmark_runs.json
data/reports/2mm2_2mm_interleaved_1s/: benchmark_data_results.json  benchmark_runs.json
data/reports/2mm2_2mm_uniform_150_250/: benchmark_data_results.json  benchmark_runs.json
data/reports/4mm2_4mm/: benchmark_data_results.json  benchmark_runs.json
data/reports/partial_final/: benchmark_runs.json
data/reports/real_1rep_4.25mm/: benchmark_runs.json
data/reports/uniform_gaussian_100rep_100pts-200pts_2d-6d/: benchmark_runs.json
data/reports/uniform_gaussian_100rep_100pts-200pts_2mm-6.5mm/: benchmark_runs.json
data/reports/uniform_gaussian_10rep_150_250/: benchmark_data_results.json  benchmark_runs.json
data/samples/: data_0.txt  data_1.txt  data_11.txt  data_12.txt  data_14.txt  data_15.txt  data_16.txt  data_18.txt  data_20.txt  data_22.txt  data_23.txt  data_24.txt  data_25.txt  data_26.txt  data_27.txt  data_6.txt  data_8.txt  results_0.txt  results_1.txt  results_10.txt  results_14.txt  results_2.txt  results_20.txt  results_22.txt  results_24.txt  results_25.txt  results_26.txt  results_4.txt  results_6.txt  results_7.txt
data/samples/20/: data_0.txt  data_10.txt  data_17.txt  data_2.txt  data_20.txt  data_23.txt  data_24.txt  data_25.txt  data_26.txt  data_28.txt  data_29.txt  data_31.txt  data_32.txt  data_33.txt  data_34.txt  data_35.txt  data_39.txt  data_40.txt  data_42.txt  data_43.txt  data_44.txt  data_46.txt  data_48.txt  data_5.txt  data_50.txt  data_52.txt  data_54.txt  data_55.txt  data_56.txt  data_59.txt  data_60.txt  data_64.txt  data_65.txt  data_66.txt  data_67.txt  data_68.txt  data_7.txt  data_71.txt  data_72.txt  data_73.txt  (+75 more)
data/samples/30/: data_0.txt  data_1.txt  data_10.txt  data_12.txt  data_13.txt  data_14.txt  data_15.txt  data_17.txt  data_2.txt  data_20.txt  data_23.txt  data_24.txt  data_25.txt  data_26.txt  data_29.txt  data_3.txt  data_30.txt  data_31.txt  data_33.txt  data_34.txt  data_36.txt  data_37.txt  data_42.txt  data_43.txt  data_45.txt  data_46.txt  data_49.txt  data_5.txt  data_50.txt  data_52.txt  data_53.txt  data_54.txt  data_56.txt  data_6.txt  data_62.txt  data_63.txt  data_64.txt  data_67.txt  data_70.txt  data_72.txt  (+84 more)
data/samples/300/: data_0.txt  data_2.txt
data/samples/40/: data_1.txt  data_10.txt  data_12.txt  data_14.txt  data_15.txt  data_16.txt  data_17.txt  data_18.txt  data_19.txt  data_22.txt  data_24.txt  data_25.txt  data_26.txt  data_28.txt  data_29.txt  data_31.txt  data_33.txt  data_34.txt  data_37.txt  data_38.txt  data_39.txt  data_4.txt  data_40.txt  data_46.txt  data_47.txt  data_49.txt  data_50.txt  data_52.txt  data_55.txt  data_56.txt  data_59.txt  data_6.txt  data_60.txt  data_61.txt  data_62.txt  data_63.txt  data_64.txt  data_65.txt  data_66.txt  data_68.txt  (+79 more)
data/samples/40_norm/: data_1.txt  data_10.txt  data_100.txt  data_101.txt  data_105.txt  data_106.txt  data_107.txt  data_108.txt  data_109.txt  data_11.txt  data_110.txt  data_111.txt  data_112.txt  data_113.txt  data_114.txt  data_116.txt  data_118.txt  data_119.txt  data_122.txt  data_123.txt  data_127.txt  data_128.txt  data_129.txt  data_130.txt  data_131.txt  data_132.txt  data_133.txt  data_136.txt  data_137.txt  data_139.txt  data_143.txt  data_144.txt  data_149.txt  data_15.txt  data_150.txt  data_151.txt  data_153.txt  data_154.txt  data_155.txt  data_156.txt  (+1081 more)
data/samples/50/: data_1.txt  data_5.txt  data_7.txt  data_9.txt  results_0.txt  results_3.txt  results_7.txt  results_9.txt
data/samples/80/: data_10.txt  data_19.txt  data_2.txt  data_3.txt  data_4.txt  data_7.txt  results_12.txt  results_16.txt  results_27.txt  results_28.txt  results_3.txt  results_5.txt  results_8.txt  results_9.txt
data/samples/80_1/: data_0.txt  data_11.txt  data_12.txt  data_13.txt  data_14.txt  data_15.txt  data_16.txt  data_18.txt  data_19.txt  data_2.txt  data_20.txt  data_21.txt  data_22.txt  data_24.txt  data_27.txt  data_29.txt  data_4.txt  data_5.txt  data_6.txt  data_7.txt  data_9.txt  results_0.txt  results_1.txt  results_12.txt  results_13.txt  results_14.txt  results_15.txt  results_16.txt  results_20.txt  results_22.txt  results_23.txt  results_28.txt  results_3.txt  results_4.txt  results_5.txt  results_7.txt  results_9.txt
data/samples/antipodal/100/: data_0.txt
data/samples/antipodal/50/: data_0.txt  data_1.txt  data_2.txt  data_3.txt  data_4.txt  data_5.txt  data_6.txt  results_0.txt  results_1.txt  results_2.txt  results_3.txt  results_4.txt  results_5.txt  results_6.txt
data/samples/antipodal/60/: data_0.txt  data_1.txt  data_2.txt  data_3.txt  data_4.txt  data_5.txt  data_6.txt  data_7.txt  data_8.txt  results_0.txt  results_1.txt  results_2.txt  results_3.txt  results_4.txt  results_5.txt  results_6.txt  (+4 more)
data/samples/experiments/: data_std_1.txt  data_std_10.txt  data_std_2.txt  data_std_3.txt  data_std_4.txt  data_std_5.txt  data_std_6.txt  data_std_7.txt  data_std_8.txt  data_std_9.txt
python/: constants.py.in  generate_input_samples.py  generate_latex_plots.py  generate_plots.py  generate_samples.py  generate_solution_plots.py  generate_synthetic_samples.py  generate_table.py  latex.py  real_2_064.json  requirements.txt  run_with_real_data.py  utils.py
src/: CMakeLists.txt
src/bench/: main.cpp
src/common/: Antipodal.cpp  Antipodal.h  AntipodalOptimized.cpp  AntipodalOptimized.h  Constants.h  Constants.h.in  CustomMath.cpp  CustomMath.h  Eppstein.cpp  Eppstein.h  EppsteinPartitioned.cpp  EppsteinPartitioned.h  KernelTypes.h  Parser.cpp  Parser.h  TestingUtils.h  Utils.cpp  Utils.h
src/main/: main.cpp
src/py-binding/: main.cpp
src/test/: main.cpp
(+6599 files in other folders)
